CVSL-1179 fix spacing

--- a/assets/sass/components/_utils.scss
+++ b/assets/sass/components/_utils.scss
@@ -18,6 +18,10 @@
   }
 }
 
+.sub-heading-margin-top {
+  margin-top: 100px;
+}
+
 .greyed-text {
   color: $govuk-secondary-text-colour;
 }
